import { snapshotTest } from 'testing';

describe('Progress demo snapshot', () => {
  snapshotTest('Progress');
});
