// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress demo snapshot > Progress demo snapshot 0 1`] = `
<div>
  <div
    aria-label="进度条"
    aria-labelledby=""
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    aria-valuetext="进行中"
    class="bui-progress"
    role="progressbar"
  >
    <div
      class="bui-progress-inner"
    >
      <div
        class="bui-progress-bg"
        style="width: 40%;"
      />
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 5px; --flex-wrap: nowrap;"
  >
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      aria-valuetext="进行中"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 40%;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="过半完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 50%;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      aria-valuetext="进行中"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 30%;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="80"
      aria-valuetext="接近完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 80%;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      aria-valuetext="即将完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 90%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: flex-start; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      aria-valuetext="过半完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 60%; height: 10px;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      aria-valuetext="过半完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 60%; height: 15px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: flex-start; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      aria-valuetext="过半完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 60%;"
        />
      </div>
    </div>
    <div
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      aria-valuetext="即将完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 90%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 5`] = `
<div>
  <div
    aria-label="进度条"
    aria-labelledby=""
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="60"
    aria-valuetext="过半完成"
    class="bui-progress"
    role="progressbar"
  >
    <div
      class="bui-progress-inner"
    >
      <div
        class="bui-progress-bg"
        style="width: 60%;"
      />
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      aria-label="文件下载进度"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="过半完成"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 50%;"
        />
      </div>
    </div>
    <div
      aria-label="数据加载进度"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="已完成75%"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 75%;"
        />
      </div>
    </div>
    <div
      aria-describedby="progress-description"
      aria-label="进度条"
      aria-labelledby=""
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      aria-valuetext="进行中"
      class="bui-progress"
      role="progressbar"
    >
      <div
        class="bui-progress-inner"
      >
        <div
          class="bui-progress-bg"
          style="width: 30%;"
        />
      </div>
    </div>
    <span
      id="progress-description"
      style="display: none;"
    >
      这是进度条的详细描述信息
    </span>
  </div>
</div>
`;
